--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "rm -rf ./dist && tsc",
     "dev": "NODE_ENV=dev nodemon --exec ts-node --files ./src/index.ts",
-    "test": "ts-mocha tests/**/*.test.ts"
+    "test": "TS_NODE_FILES=true ts-mocha --timeout 15000 --exit ./tests/index.test.ts"
   },
   "keywords": [
     "daruk-monitor-middleware",
@@ -24,6 +24,7 @@
     "@types/node": "^8.0.53",
     "@types/supertest": "^2.0.7",
     "chai": "^4.1.2",
+    "koa": "^2.7.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.3",
     "supertest": "^3.3.0",
@@ -37,7 +38,7 @@
   "dependencies": {
     "@types/basic-auth": "^1.1.2",
     "basic-auth": "^2.0.1",
-    "daruk": "^0.5.5",
+    "nyc": "^14.1.1",
     "v8-analytics": "^1.3.7",
     "v8-profiler-node8": "^6.0.1"
   }
